[build-system]
requires = ["setuptools==65.7.0", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]
include = ["analysis"]

[project]
name = "ai-hackathon-neural-nomads"
version = "0.1.0"
authors = [
    { name = "Neural Nomads @ IE", email = "robotics.club@ie.edu" },
]
description = "OCR + ETL Pipeline to extract data from term sheets"
keywords = ["hackathon", "ai", "ocr", "etl", "term sheet"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "langchain==0.0.338",
    "pandas==2.1.3",
    "openai==1.3.3"

]


[project.urls]
"Homepage" = "https://github.com/vtwoptwo/ai-hackathon"



